# gradle-kotlin-performance-experiments

./: .gitignore
large-multiproject-apply-plugins/: BUILD.bazel  gradle.properties  performance.scenarios  settings.gradle.kts
large-multiproject-apply-plugins/buildSrc/: build.gradle.kts
large-multiproject-apply-plugins/project1/: build.gradle.kts
large-multiproject-apply-plugins/project10/: build.gradle.kts
large-multiproject-apply-plugins/project100/: build.gradle.kts
large-multiproject-apply-plugins/project101/: build.gradle.kts
large-multiproject-apply-plugins/project102/: .project  build.gradle.kts
large-multiproject-apply-plugins/project103/: .project  build.gradle.kts
large-multiproject-apply-plugins/project104/: .project  build.gradle.kts
large-multiproject-apply-plugins/project105/: .project  build.gradle.kts
large-multiproject-apply-plugins/project106/: .project  build.gradle.kts
large-multiproject-apply-plugins/project107/: .project  build.gradle.kts
large-multiproject-apply-plugins/project108/: .project  build.gradle.kts
large-multiproject-apply-plugins/project109/: .project  build.gradle.kts
large-multiproject-apply-plugins/project11/: .project  build.gradle.kts
large-multiproject-apply-plugins/project110/: .project  build.gradle.kts
large-multiproject-apply-plugins/project111/: .project  build.gradle.kts
large-multiproject-apply-plugins/project112/: .project  build.gradle.kts
large-multiproject-apply-plugins/project113/: .project  build.gradle.kts
large-multiproject-apply-plugins/project114/: .project  build.gradle.kts
(+100960 files in other folders)
